# veriq

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CLAUDE.md  README.ja.md  README.md  justfile  pyproject.toml  renovate.json5  zensical.toml
.github/: CODEOWNERS
.github/workflows/: ci.yaml  docs.yaml  release.yaml  zizmor.yaml
docs/: cli-reference.md  concepts.md  index.md  installation.md
docs/tutorial/: index.md  step1-first-project.md  step2-calculations.md  step3-cross-scope.md  step4-verifications.md  step5-tables.md  step6-external-files.md  step7-requirements.md
examples/: dummysat.generated.toml  dummysat.in.schema.json  dummysat.in.toml  dummysat.out.toml  dummysat.py  mass_budget.in.schema.json  mass_budget.in.toml  mass_budget.out.toml  mass_budget.py  power_config.json  table_with_basemodel.py
examples/tutorial/: power_profile.csv  step1.in.toml  step1.py  step2.in.toml  step2.py  step3.in.toml  step3.py  step4.in.toml  step4.py  step5.in.toml  step5.py  step6.in.toml  step6.py  step7.in.toml  step7.py
src/veriq/: __init__.py  _atomic.py  _bounded_models.py  _build.py  _context.py  _decorators.py  _default.py  _diff.py  _eval.py  _external_data.py  _io.py  _models.py  _path.py  _range_enum.py  _scaffold.py  _str_enum_with_doc.py  _table.py  _toml_edit.py  _traceability.py  _update.py
src/veriq/_cli/: config.py  discover.py  export.py  graph_query.py  graph_render.py  main.py  render_trace.py
src/veriq/_cli/tui/: __init__.py  app.py  data.py  screens.py  widgets.py
src/veriq/_eval_engine/: __init__.py  _engine.py  _resolution.py  _tree.py
src/veriq/_export/: __init__.py  _components.py  _css.py  _data.py  _layout.py  _site.py  _urls.py  html.py
src/veriq/_export/_pages/: __init__.py  calculation.py  index.py  node.py  requirement.py  scope.py  verification.py
src/veriq/_graph/: __init__.py  _algorithms.py  _dependency_graph.py
src/veriq/_ir/: __init__.py  _builder.py  _graph_spec.py  _node_spec.py
tests/: test_assume.py  test_atomic.py  test_bounded_models.py  test_cli_graph.py  test_collect.py  test_config.py  test_decorators.py  test_default.py  test_dependency_graph.py  test_diff.py  test_eval_engine.py  test_extended_types.py  test_external_data.py  test_html_export.py  test_io.py  test_ir.py  test_multidim_table_bug.py  test_path.py  test_project_model.py  test_range_enum.py  test_relations.py  test_schema_check.py  test_schema_command.py  test_scope_input.py  test_scope_scaffold_validate.py  test_site_export.py  test_str_enum_with_doc.py  test_table.py  test_table_basemodel_toml.py  test_table_edge_cases.py  test_table_pydantic.py  test_table_verification.py  test_toml_edit.py  test_traceability.py  test_transient_calc.py  test_tree.py  test_tui_app.py  test_tui_data.py  test_update.py  test_update_check.py  (+1 more)
