[project]
name = "veriq"
version = "0.2.0"
description = "A lightweight Python library for managing system requirements, verifications, and design."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Shunichiro Nomura", email = "nomura@space.t.u-tokyo.ac.jp" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.11.7",
  "rich>=14.0.0",
  "scoped-context>=0.0.1",
  "textual>=7.3.0",
  "tomli-w>=1.1.0",
  "typer>=0.16.1",
]

[project.urls]
Issues = "https://github.com/shunichironomura/veriq/issues"
Repository = "https://github.com/shunichironomura/veriq"

[project.scripts]
veriq = "veriq._cli.main:app"

[dependency-groups]
dev = [
  "pre-commit>=4.2.0",
  { include-group = "license" },
  { include-group = "ruff" },
  { include-group = "test" },
  { include-group = "typing" },
]
license = [
  "pip-licenses>=5.5.0",
]
ruff = ["ruff>=0.11.13"]
test = [
  "coverage>=7.10.4",
  "jsonschema>=4.26.0",
  "pytest>=8.4.0",
  "pytest-asyncio>=1.3.0",
]
typing = [
  "basedpyright>=1.33.0",
  "mypy>=1.16.0",
  "ty>=0.0.2",
  { include-group = "test" },
]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.coverage.run]
source = ["src/veriq"]

[tool.coverage.report]
exclude_also = [
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  'class .*\bProtocol\):',
  '@(abc\.)?abstractmethod',
]

[tool.mypy]
strict = true

[tool.pip-licenses]
allow-only = "MIT License;BSD License;Apache 2.0;Python Software Foundation License;PSF-2.0;ISC License (ISCL);Apache Software License;The Unlicense (Unlicense);MIT;BSD-3-Clause"

[tool.pytest]
addopts = [
  "--capture=no",
  "--color=yes",
  "--log-cli-level=INFO",
  "--strict-markers",
  "--verbose",
  "--verbose",
  "-ra",  # show extra test summary info for all tests except passed tests
]
minversion = "9.0"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
# Modify the following rules according to your preferences
ignore = [
  "PLR2004",  # magic numbers
  "S101",  # use of assert
  "G",  # logging format
  # "ANN101",  # missing type annotation for self in method
  #     "ANN102",  # missing type annotation for cls in classmethod
  #     "D100",    # missing docstring in public module
  #     "D101",    # missing docstring in public class
  #     "D102",    # missing docstring in public method
  #     "D103",    # missing docstring in public function
  #     "D104",    # missing docstring in public package
  #     "D105",    # missing docstring in magic method
  #     "D107",    # missing docstring in __init__
  "D203",  # 1 blank line required before class docstring
  "D213",  # multi-line docstring summary should start at the second line
  # "PGH003",  # Use specific rule codes when ignoring type issues
  #     "RET505",  # Unnecessary `else` after `return` statement
  "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
  "D401",  # First line should be in imperative mood
  "TD002",  # Missing author in TODO
  "TD003",  # add link on issue into TODO
  # "PLR0913", # Too many arguments to function call
  #     "D407",    # Missing dashed underline after section
  #     "ERA001",  # Commented out code
  "FIX001",  # FIXME comments
  "FIX002",  # Fixme comment
  "FIX004",  # HACK comments
  "TD001",  # FIXME
  # "S311",    # suspicious-non-cryptographic-random-usage
  #     "EM101",   # raw-string-in-exception
  #     "TRY003",  # Avoid specifying long messages outside the exception class
  # "UP040", # uses `TypeAlias` annotation instead of the `type` keyword. This is to be compatible with griffe.
]
unfixable = [
  "F401",  # Prevent auto-fix for unused imports
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [
  "D",  # Docstring
  "INP001",  # implicit-namespace-package
  "ANN201",  # missing-return-type-undocumented-public-function
  "S101",  # use of assert
  "SLF001",  # private-member-access (common in tests)
  "F841",  # unused-variable (e.g., pilot in async context)
  "PLC0415",  # import-outside-top-level (local test helpers)
]
"examples/**.py" = [
  "D",  # Docstring
  "INP001",  # implicit-namespace-package
  "ANN201",  # missing-return-type-undocumented-public-function
  "S101",  # use of assert
  "T201",  # Use of print function
  "PLR2004",  # magic numbers
  "ARG001",  # Unused function argument
  "ERA001",  # Commented out code
]
